/* -------------------------------------------------------------------------- *\
 *        Apache 2.0 License Copyright © 2022-2023 The Aurae Authors          *
 *                                                                            *
 *                +--------------------------------------------+              *
 *                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |              *
 *                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |              *
 *                |  ███████║██║   ██║██████╔╝███████║█████╗   |              *
 *                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |              *
 *                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |              *
 *                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |              *
 *                +--------------------------------------------+              *
 *                                                                            *
 *                         Distributed Systems Runtime                        *
 *                                                                            *
 * -------------------------------------------------------------------------- *
 *                                                                            *
 *   Licensed under the Apache License, Version 2.0 (the "License");          *
 *   you may not use this file except in compliance with the License.         *
 *   You may obtain a copy of the License at                                  *
 *                                                                            *
 *       http://www.apache.org/licenses/LICENSE-2.0                           *
 *                                                                            *
 *   Unless required by applicable law or agreed to in writing, software      *
 *   distributed under the License is distributed on an "AS IS" BASIS,        *
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *
 *   See the License for the specific language governing permissions and      *
 *   limitations under the License.                                           *
 *                                                                            *
\* -------------------------------------------------------------------------- */

syntax = "proto3";

package aurae.vms.v0;

option go_package = "github.com/aurae-runtime/ae/client/pkg/api/v0/vms;vmsv0";

service VmService {
  // Reserve requested system resources for a new VM.
  rpc Allocate(VmServiceAllocateRequest) returns (VmServiceAllocateResponse) {}

  // Free up previously requested resources for an existing VM
  rpc Free(VmServiceFreeRequest) returns (VmServiceFreeResponse) {}

  // Start a new VM.
  rpc Start(VmServiceStartRequest) returns (VmServiceStartResponse) {}

  // Stop one or more VMs.
  rpc Stop(VmServiceStopRequest) returns (VmServiceStopResponse) {}

  // List all VMs
  rpc List(VmServiceListRequest) returns (VmServiceListResponse) {}
}

message VmServiceListRequest{}
message VmServiceListResponse{
  repeated VirtualMachineSummary machines = 1;
}

message VirtualMachineSummary {
  // The identifier of the VM
  string id = 1;

  // Status of the VM
  string status = 2;

  // The memory size of VM
  uint32 mem_size_mb = 3;

  // The number of vCPUs for the VM
  uint32 vcpu_count = 4;

  // The path to the VM kernel image
  string kernel_img_path = 5;

  // Path to the image mounted as the root directory of the VM
  string root_dir_path = 6;

  // Auraed server address of the VM
  string auraed_address = 7;
}

message VmServiceAllocateRequest{
  VirtualMachine machine = 1;
}
message VmServiceAllocateResponse{
  string vm_id = 1;
}

message VmServiceFreeRequest{
  string vm_id = 1;
}
message VmServiceFreeResponse{}

message VmServiceStartRequest{
  string vm_id = 1;
}
message VmServiceStartResponse{
  // Auraed server address of the VM
  string auraed_address = 1;
}

message VmServiceStopRequest{
  string vm_id = 1;
}
message VmServiceStopResponse{}


// An Aurae virtual machine
message VirtualMachine {
  // The identifier of the VM
  string id = 1;

  // The memory size of VM
  uint32 mem_size_mb = 2;

  // The number of vCPUs for the VM
  uint32 vcpu_count = 3;

  // The path to the VM kernel image
  string kernel_img_path = 4;

  // Arguments to pass to the kernel
  repeated string kernel_args = 5;

  // Root drive config
  RootDrive root_drive = 6;

  // Additional drive mount configs
  repeated DriveMount drive_mounts = 7;

  // Auraed server address of the VM
  string auraed_address = 8;
}

// Message to specify the root filesystem config for a  VM
message RootDrive {
  // The path on the host to the filesystem image
  // that will supply the rootfs of the VM.
  string image_path = 1;

  // Mount the root filesystem as read-only. (Default: false)
  bool read_only = 2;
}

// Message to specify a block device config for a VM
message DriveMount {
  // The path on the host to the filesystem image
  // that will be mounted inside the VM.
  string image_path = 1;

  // The path inside the VM guest at which the filesystem image will be mounted.
  string vm_path = 2;

  // The filesystem type (i.e. ext4, xfs, etc.), as
  // used when mounting the filesystem image inside the VM. The VM guest kernel
  // is expected to have support for this filesystem.
  string fs_type = 3;

  // Mount the root filesystem as read-only. (Default: false)
  bool read_only = 4;
}
